force-app/main/default/objects/Penny_Gamification__c/Penny_Gamification__c.object-meta.xml
<CustomObject>
    <label>Penny Gamification</label>
    <nameField>
        <displayFormat>PGM-{0000}</displayFormat>
        <label>Penny Gamification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penny Gamifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>