force-app/main/default/objects/Penny_Gamification__c/fields/Awarded_By__c.field-meta.xml
<CustomField>
    <fullName>Awarded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Awarded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Awarded_By</relationshipName>
    <type>Lookup</type>
</CustomField>