force-app/main/default/objects/Penny_Gamification__c/fields/Sprint_Points__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Points__c</fullName>
    <label>Sprint Points</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>